--- a/apps.html
+++ b/apps.html
@@ -33,7 +33,7 @@
                 <div class="section-title">Taxi</div>
                 <div class="grid">
                     <div class="box">
-                        <a href="taxi.html"><img src="image/yandextaksi.png" alt="Taxi 1"></a>
+                        <a href="https://taxi.yandex.uz/"><img src="image/yandextaksi.png" alt="Taxi 1"></a>
                     </div>
                 </div>
             </div>
